# burn-vk-experiment

./: Cargo.toml  Cargo.toml.bak  burn_vk_shader.spv
burn-vk/: Cargo.toml
burn-vk-types/: Cargo.toml
burn-vk-types/src/: lib.rs
burn-vk/src/: device.rs  lib.rs
burn-vk/src/backend/: mod.rs
burn-vk/src/backend/fp32/: mod.rs  module.rs  tensor.rs
burn-vk/src/backend/int64/: mod.rs  module.rs  tensor.rs
shader/: Cargo.toml  shader.spv
shader/src/: lib.rs
shader_builder/: Cargo.toml  rust-toolchain.toml
shader_builder/src/: main.rs
src/: device.rs  lib.rs  module.rs  tensor.rs
vulkano-spirv-bind-macro/: Cargo.toml
vulkano-spirv-bind-macro/src/: lib.rs  lib.rs.bak
