[package]
name = "vulkano-spirv-bind-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
vulkano = "0.32.3"


[dependencies.syn]
version = "1.0.107"
features = ["full"]